Updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,39 @@
-
-collective.ptg.carousel.egg-info/*
-
-*/.DS_Store
-
-collective/ptg/carousel/locales/en/LC_MESSAGES/.DS_Store
-
-collective/ptg/carousel/locales/no/LC_MESSAGES/.DS_Store
-
-collective/ptg/carousel/locales/en/.DS_Store
-
-collective/ptg/carousel/locales/.DS_Store
-
-collective/ptg/carousel/locales/no/.DS_Store
-
 *~
 *.pyc
+*.pyo
+*.tmp*
+*.mo
+*.egg
+*.EGG
+*.egg-info
+*.EGG-INFO
+*.kpf
+*.swp
+*.wpr
+.*.cfg
+.installed.cfg
+.mr.developer.cfg
+.eggs/
+.hg/
+.bzr/
+.svn/
+.project
+.pydevproject
+pip-selfcheck.json
+bin/
+build/
+develop-eggs/
+downloads/
+eggs/
+fake-eggs/
+include/
+lib/
+local/
+parts/
+dist/
+var/
 
+
+
+# OSX
 .DS_Store
